refactor: replace string formatting with String.format for consistency
Standardize string formatting across the codebase by replacing .formatted() with String.format() to maintain consistency in string interpolation syntax. This change affects server message formatting in both ClientCommandHandler and EventHandler.